--- a/dashboard/templates/dashboard/partials/summary.html
+++ b/dashboard/templates/dashboard/partials/summary.html
@@ -11,30 +11,30 @@
     <div class="container-resume-trans">
         <div>
             <span>A receber hoje:</span>
-            <strong class="receivement">R$ 00.000,00</strong>
+            <strong class="receivement">R$ </strong>
         </div>
         <div>
             <span>Restante do mês:</span>
-            <strong>R$ 00.000,00</strong>
+            <strong>R$ </strong>
         </div>
         <div>
             <span>Atrasados:</span>
-            <strong>R$ 00.000,00</strong>
+            <strong>R$ </strong>
         </div>
     </div>
 
     <div class="container-resume-trans">
         <div>
             <span>A pagar hoje:</span>
-            <strong class="payment">R$ 00.000,00</strong>
+            <strong class="payment">{{payment_value_today}}</strong>
         </div>
         <div>
             <span>Restante do mês:</span>
-            <strong>R$ 00.000,00</strong>
+            <strong>R$ {{payment_value_rest}}</strong>
         </div>
         <div>
             <span>Atrasados:</span>
-            <strong>R$ 00.000,00</strong>
+            <strong>R$ {{payment_value_late}}</strong>
         </div>
     </div>
     <div class="container-daily-flow">
