--- a/dashboard/static/dashboard/styles/style.css
+++ b/dashboard/static/dashboard/styles/style.css
@@ -99,7 +99,7 @@ header > div > span{
 .title{
     color: #d3d3d3;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .value{
@@ -194,8 +194,8 @@ header > div > span{
 /*endRegion:paylist*/
 
 /*region:paylist-item*/
-li{
-    padding: 10px;
+.list-item{
+    padding: 10px 15px;
     display: flex;
     align-items: center;
     gap: 24px;
@@ -205,14 +205,14 @@ li{
     box-sizing: border-box;
 }
 
-li > div:nth-child(2){
+.list-item > div:nth-child(2){
     flex: 1;
     display: flex;
     flex-direction: column;
-    
+    gap: 5px;
 }
 
-li > div:nth-child(2) > strong{
+.list-item > div:nth-child(2) > strong{
     display: inline-block;
     color: #f5f5f5;
     font-size: 14px;
@@ -223,7 +223,7 @@ li > div:nth-child(2) > strong{
     direction: ltr;
 }
 
-li > div:nth-child(2) > span{
+.list-item > div:nth-child(2) > span,li > div:nth-child(3) > span{
     color:#9b9b9b;
     font-size: 12px;
 }
@@ -232,7 +232,14 @@ li > div:nth-child(2) > span{
     color: #bdbcbc;
 }
 
-li > div:nth-child(3) > strong{
+.list-item > div:nth-child(3){
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+}
+
+.list-item > div:nth-child(3) > strong{
     color: #f5f5f5;
     font-size: 16px;
     font-weight: 500;
