--- a/dashboard/templates/dashboard/pages/index.html
+++ b/dashboard/templates/dashboard/pages/index.html
@@ -1,51 +1,107 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang='pt-br'>
-    <head>
-        <meta charset='UTF-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <title>Dashboard | Lissaro</title>
-        <script src='' defer></script>
-        <link rel='stylesheet' href='{% static "dashboard/styles/style.css" %}'>
-        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css' integrity='sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==' crossorigin='anonymous' referrerpolicy='no-referrer' />
-    </head>
-    <body>
-        {% include 'dashboard/partials/header.html' %}
-        <div class="dashboard">
-            <div class="dashboard__col1">
-                {% include 'dashboard/partials/summary.html' %}
-            </div>
-            <div class="dashboard__col2">
-                <div class="paylists-container">
-                    <h4>Pagamentos atrasados</h4>
-                    <div class="paylists">
-                        {% for payment in payment_bills_late %}
-                            {% include 'dashboard/partials/list-item.html' %}
-                        {% empty %}
-                            <div class="empty">
-                                <i class="fa-solid fa-check"></i>
-                                <p>Não há pagamentos</p>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    
-                </div>
-                <div class="paylists-container">
-                    <h4>Pagamentos de hoje</h4>
-                    <div class="paylists">
+{% extends 'dashboard/pages/base.html' %}
 
-                    </div>
-                    
+{% block title %}Dashboard | Lissaro{% endblock title %}
+{% block content %}
+    {% include 'dashboard/partials/header.html' %}
+    <div class="dashboard">
+        <div class="dashboard__col1">
+            {% include 'dashboard/partials/summary.html' %}
+        </div>
+        <div class="dashboard__col2">
+            <div class="paylists-container">
+                <h4>Pagamentos atrasados</h4>
+                <div class="paylists">
+                    {% for data in payment_bills_late %}
+                        {% include 'dashboard/partials/list-item.html' %}
+                    {% empty %}
+                        <div class="empty">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Não há pagamentos</p>
+                        </div>
+                    {% endfor %}
                 </div>
-                <div class="paylists-container">
-                    <h4>Próximos pagamentos</h4>
-                    <div class="paylists">
-                        
-                    </div>
-                    
+                
+            </div>
+            <div class="paylists-container">
+                <h4>Pagamentos de hoje</h4>
+                <div class="paylists">
+                    {% for data in payment_bills_today %}
+                        {% include 'dashboard/partials/list-item.html' %}
+                    {% empty %}
+                        <div class="empty">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Não há pagamentos</p>
+                        </div>
+                    {% endfor %}
                 </div>
+                
+            </div>
+            <div class="paylists-container">
+                <h4>Próximos pagamentos</h4>
+                <div class="paylists">
+                    {% for data in payment_bills_rest %}
+                        {% include 'dashboard/partials/list-item.html' %}
+                    {% empty %}
+                        <div class="empty">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Não há pagamentos</p>
+                        </div>
+                    {% endfor %}
+                </div>
+                
             </div>
         </div>
-    </body>
-</html>
+    </div>
+    {% include 'dashboard/partials/modal.html' %}
+{% endblock content %} 
+
+{% block flashs %}
+    <ul class="dashboard-messages" id="flash-messages">
+        {% if messages %}
+        
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        {% endif %}
+    </ul>
+{% endblock flashs %}
+
+{% block javascript %}
+    <script>
+        modal = document.getElementById("modal")
+        conf = document.getElementById("conf-btt")
+        modalCancelBtt = document.getElementById("cancel-btt")
+        modalSaveBtt = document.getElementById("save-btt")
+        flashMessage = document.getElementById("flash-messages")
+        reloadIcon = document.getElementById("reload-icon")
+        reloadTxt = document.getElementById("reload-text")
+        listAccounts = document.getElementById("list-accounts")
+        accountsBtt = document.getElementById("accounts-btt")
+
+        reloadIcon.addEventListener('click',()=>{
+            reloadIcon.classList.add('rotate-center')
+            reloadTxt.innerHTML="Atualizando"
+        })
+
+        accountsBtt.addEventListener('click',()=>{
+            toggleActive(listAccounts)
+        })
+        
+        modalCancelBtt.addEventListener('click',()=>{
+            toggleActive(modal)
+        })
+
+        conf.addEventListener('click',()=>{
+            toggleActive(modal)
+        })
+
+        function toggleActive(element){
+            element.classList.toggle('active')
+        }
+
+        window.addEventListener('load',()=>{
+            unfade(flashMessage)
+        })
+    </script>
+{% endblock javascript %}
+        
