--- a/dashboard/templates/dashboard/partials/summary.html
+++ b/dashboard/templates/dashboard/partials/summary.html
@@ -1,32 +1,59 @@
+{% load filters %}
 <div class="container-summary">
 
     <div class="container-resume-acc"> 
-        <i class="fa-solid fa-building-columns"></i>
-        <div class="content">
-            <span class="title">Caixa Tesourária</span>
-            <strong class="value">R$ 00.000,00</strong>
+        <div class="total-balance-container">
+            <i class="fa-solid fa-building-columns"></i>
+            <div class="total-balance">
+                <span class="title">Saldo bancário total</span>
+                {% if '-' in total_balance%}
+                    <strong class="value payment">R$ {{total_balance}}</strong>
+                    {% else %}
+                    <strong class="value">R$ {{total_balance}}</strong>
+                {% endif %}
+                
+            </div>
+        </div>
+        
+        <div class="accounts"> 
+            <button id="accounts-btt">
+                <i class="fa-solid fa-eye"></i>
+                <span>Visualizar Contas</span>
+            </button>
+            <ul id="list-accounts">
+                {% for account in balances_on_account %}
+                    <li>
+                        <strong>{{account.conta}}</strong>
+                        {% if account.valor < 0 %}
+                                <span class="payment">R$ {{account.valor| format}}</span>
+                            {% else %}
+                                <span>R$ {{account.valor| format}}</span>
+                        {% endif %}
+                    </li>
+                {% endfor %}       
+            </ul>
         </div>
     </div>
 
     <div class="container-resume-trans">
         <div>
             <span>A receber hoje:</span>
-            <strong class="receivement">R$ </strong>
+            <strong class="receivement">R$ {{receivements_value_today}}</strong>
         </div>
         <div>
             <span>Restante do mês:</span>
-            <strong>R$ </strong>
+            <strong>R$ {{receivements_value_rest}}</strong>
         </div>
         <div>
             <span>Atrasados:</span>
-            <strong>R$ </strong>
+            <strong>R$ {{receivements_value_late}}</strong>
         </div>
     </div>
 
     <div class="container-resume-trans">
         <div>
             <span>A pagar hoje:</span>
-            <strong class="payment">{{payment_value_today}}</strong>
+            <strong class="payment">R$ {{payment_value_today}}</strong>
         </div>
         <div>
             <span>Restante do mês:</span>
